# anneal

./: .gitignore  Cargo.toml  DESIGN.md  MILESTONE-1-PLAN.md  README.md  TODO.md  build-system-design.md  flake.nix
.github/workflows/: ci.yml
crates/anneal-analysis/: Cargo.toml
crates/anneal-analysis/src/: analyzer.rs  error.rs  lib.rs
crates/anneal-analysis/tests/: analyze_graph.rs  axes.rs  cargo_fetch.rs  cargo_workspace.rs  exec_mode.rs  focus_cone.rs  materialize_exclusion.rs  multi_package.rs  native_libs.rs  nickel_eval.rs  nickel_to_cargo.rs  nickel_to_pnpm.rs  pnpm_install.rs  pnpm_scripts.rs  snapshot_neutrality.rs  structured_results.rs  test_targets.rs
crates/anneal-bench/: Cargo.toml
crates/anneal-bench/src/: main.rs
crates/anneal-cas/: Cargo.toml
crates/anneal-cas/src/: lib.rs
crates/anneal-cli/: Cargo.toml
crates/anneal-cli/src/: lock.rs  main.rs
crates/anneal-cli/tests/: cli.rs
crates/anneal-core/: Cargo.toml
crates/anneal-core/src/: config.rs  digest.rs  label.rs  lib.rs
crates/anneal-exec/: Cargo.toml
crates/anneal-exec/src/: action.rs  cache.rs  executor.rs  fetch.rs  lib.rs  materialize.rs  materializer.rs  query.rs  sandbox.rs  trust.rs  verify.rs  warm.rs
crates/anneal-exec/tests/: executor_end_to_end.rs  fixed_output.rs  linux_sandbox.rs  macos_sandbox.rs  native_fetch.rs  parallel_scheduler.rs  provenance.rs  query_spike.rs  sandbox_fds.rs  warm_reuse.rs
crates/anneal-exec/tests/support/: mod.rs
crates/anneal-loader/: Cargo.toml
crates/anneal-loader/src/: error.rs  eval.rs  graph.rs  lib.rs  validate.rs
crates/anneal-loader/tests/: load_build.rs  workspace.rs
crates/anneal-query/: Cargo.toml
crates/anneal-query/src/: lib.rs
crates/anneal-rules/: Cargo.toml
crates/anneal-rules/src/: attrs.rs  axis.rs  cargo_workspace.rs  context.rs  diagnostics.rs  lib.rs  nickel_eval.rs  pnpm_workspace.rs  providers.rs  rule.rs  rules.rs  schema.rs  state.rs  toolchain.rs
crates/anneal-rules/tests/: rules_through_executor.rs  state_and_query_context.rs
crates/anneal-snapshot/: Cargo.toml
crates/anneal-snapshot/src/: lib.rs
crates/anneal-test/: Cargo.toml
crates/anneal-test/src/: lib.rs  libtest.rs
docker/: linux-sandbox.Dockerfile
docs/: README.md  pnpm-workspace.md  roadmap.md  rules.md  sandbox-contract.md  sandboxing.md  simplex-rules.md  why-anneal.md
docs/archive/: README.md  design-v2-conversation.md  engineering-log.md  milestone-1-plan.md  original-build-system-design.md  phase-0-findings.md  pnpm-workspace-design.md  rule-contract-design.md  sandboxing-design-and-measurements.md
docs/benchmarks/: current.md
docs/decisions/: 0001-snapshot-keying-and-the-rule-trust-boundary.md
docs/proposals/: README.md  input-sensing.md  linux-vm.md  remote-cache.md
scripts/: test-linux-sandbox-docker.sh
spikes/: Cargo.toml  FINDINGS.md
spikes/materializer-spike/: Cargo.toml
spikes/materializer-spike/src/: main.rs
spikes/starlark-spike/: Cargo.toml
spikes/starlark-spike/src/: main.rs
