[package]
name = "anneal-exec"
version.workspace = true
edition.workspace = true
description = "Execution kernel: Action model, action cache, materializer, sandbox, and the Executor interface."

[dependencies]
anneal-core = { path = "../anneal-core" }
anneal-cas = { path = "../anneal-cas" }
anneal-snapshot = { path = "../anneal-snapshot" }
libc = "0.2"
# Native fixed-output fetch (src/fetch.rs): pure-Rust HTTP/TLS with Mozilla's
# root store compiled in — defaults are rustls + ring + webpki-roots.
ureq = "3"

[dev-dependencies]
serde_json = "1"
tempfile = "3"

[lints]
workspace = true
