[package]
name = "anneal-rules"
version.workspace = true
edition.workspace = true
description = "The Rule trait (the system/rule boundary) and the first-party rules."

[dependencies]
anneal-core = { path = "../anneal-core" }
anneal-cas = { path = "../anneal-cas" }
anneal-exec = { path = "../anneal-exec" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
