[package]
name = "anneal-snapshot"
version.workspace = true
edition.workspace = true
description = "The snapshot protocol: content-addressed save/restore of native tools' mutable cache directories (e.g. Cargo's target/)."

[dependencies]
anneal-core = { path = "../anneal-core" }
anneal-cas = { path = "../anneal-cas" }

[dev-dependencies]
tempfile = "3"
